src/objects/MUSW__RESTSettingFields_Push__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Specifies field mappings for REST services defined in REST Settings (push requests)</description>
    <fields>
        <fullName>MUSW__Field_Name__c</fullName>
        <description>Name of the destination field (eg. GIS.DBO.Owners.AssesseeName)</description>
        <inlineHelpText>Name of the destination field (eg. GIS.DBO.Owners.AssesseeName)</inlineHelpText>
        <label>REST Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Mapped_Object_Name__c</fullName>
        <description>API name of the mapped object (e.g. MUSW__Parcel__c)</description>
        <inlineHelpText>API name of the mapped object (e.g. MUSW__Parcel__c)</inlineHelpText>
        <label>Mapped Object Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__REST_Setting_Name__c</fullName>
        <description>Name of the associated REST Setting</description>
        <inlineHelpText>Name of the associated REST Setting</inlineHelpText>
        <label>REST Setting Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Transform_Instructions__c</fullName>
        <description>Uses MS Access formulas to specify the source-to-dest data transformation. To concatenate text/values use the CONCAT function. eg. CONCAT(field1, &quot; &quot;, REPLACE(field2, &quot;xx&quot;, &quot;&quot;)). All fields referenced here must be from the Mapped Object</description>
        <inlineHelpText>Uses MS Access formulas to specify the source-to-dest data transformation. To concatenate text/values use the CONCAT function. eg. CONCAT(field1, &quot; &quot;, REPLACE(field2, &quot;xx&quot;, &quot;&quot;)). All fields referenced here must be from the Mapped Object</inlineHelpText>
        <label>Transform Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines if the setting is included in the POST Request</description>
        <inlineHelpText>Determines if the setting is included in the POST Request</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__isId__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the destination field is a unique ID field</description>
        <inlineHelpText>Determines if the destination field is a unique ID field</inlineHelpText>
        <label>Unique Identifier</label>
        <type>Checkbox</type>
    </fields>
    <label>REST Setting Fields - Push</label>
</CustomObject>